--- a/DemoWE/Views/Projects/Index.cshtml
+++ b/DemoWE/Views/Projects/Index.cshtml
@@ -41,12 +41,12 @@
 
     <thead>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.ProjectTitle)</th>
-            <th>@Html.DisplayNameFor(model => model.ProjectDescription)</th>
-            <th>@Html.DisplayNameFor(model => model.StartDate)</th>
-            <th>@Html.DisplayNameFor(model => model.Deadline)</th>
+            <th>Project Title</th>
+            <th>Project Description</th>
+            <th>Start Date</th>
+            <th>Deadline</th>
             <th>@Html.DisplayNameFor(model => model.Priority)</th>
-            <th>@Html.DisplayNameFor(model => model.AssignedDepartmentID)</th>
+            <th>Department</th>
             <th>@Html.DisplayNameFor(model => model.Status)</th>
             <th>
                 @if (ViewBag.Role == 2)
