--- a/DemoWE/Views/Shared/_LayAdmin.cshtml
+++ b/DemoWE/Views/Shared/_LayAdmin.cshtml
@@ -19,7 +19,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeSidebar()">&times;</a>
         <!-- Centered logo -->
         <div class="text-center logo-container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Admin">
                 <img src="https://i.ibb.co/1Mr4GfG/Group.png" alt="Logo" style="max-height: 50px;">
             </a>
             <div class="logo-text">WorkEvo</div>
