--- a/DemoWE/Views/Projects/Details.cshtml
+++ b/DemoWE/Views/Projects/Details.cshtml
@@ -171,14 +171,14 @@
     <table>
         <thead>
             <tr>
-                <th>TaskTitle</th>
+                <th>Task Title</th>
                 <th>Status</th>
-                <th>StartDate</th>
+                <th>Start Date</th>
                 <th>Deadline</th>
-                <th>CreatedBy</th>
-                <th>AssignedTo</th>
+                <th>From</th>
+                <th>To</th>
                 <th>Priority</th>
-                <th></th>
+             
             </tr>
         </thead>
         <tbody>
@@ -205,21 +205,8 @@
                     }
 
                     <td>@Html.DisplayFor(modelItem => item.Priority)</td>
-                    <td>
-                    <td>
-                        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                            <div class="btn-group" role="group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Option</button>
-                                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                                        @if (ViewBag.Role != 1 || item.CreatedBy == ViewBag.userid)
-                                        {
-                                        <a class="dropdown-item" asp-controller="STask" asp-action="Edit" asp-route-id="@item.TaskID">Edit</a>
-                                        }
-                                    <a class="dropdown-item" asp-controller="STask" asp-action="Details" asp-route-id="@item.TaskID">Details</a>
-
-                                </div>
-                            </div>
-                        </div>
+                   
+                   
                 </tr>
             }
         </tbody>
