--- a/DemoWE/Views/Projects/Edit.cshtml
+++ b/DemoWE/Views/Projects/Edit.cshtml
@@ -14,12 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProjectID" />
             <div class="form-group">
-                <label asp-for="ProjectTitle" class="control-label"></label>
+                <label asp-for="ProjectTitle" class="control-label">Project Title</label>
                 <input asp-for="ProjectTitle" class="form-control" />
                 <span asp-validation-for="ProjectTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProjectDescription" class="control-label"></label>
+                <label asp-for="ProjectDescription" class="control-label">Project Description</label>
                 <input asp-for="ProjectDescription" class="form-control" />
                 <span asp-validation-for="ProjectDescription" class="text-danger"></span>
             </div>
@@ -29,7 +29,7 @@
                 <span asp-validation-for="Pfile" class="text-danger"></span>
             </div> *@
             <div class="form-group">
-                <label  asp-for="StartDate" class="control-label"></label>
+                <label asp-for="StartDate" class="control-label">Start Date</label>
                 <input type="date" asp-for="StartDate" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
