--- a/DemoWE/Views/Projects/_CreatePartial.cshtml
+++ b/DemoWE/Views/Projects/_CreatePartial.cshtml
@@ -1,29 +1,52 @@
 ﻿@model DemoWE.Models.Project
-
+<head>
+<!--===============================================================================================-->
+<link rel="icon" type="image/png" href="~/images/icons/favicon.ico" />
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/fonts/iconic/css/material-design-iconic-font.min.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/vendor/animate/animate.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/vendor/animsition/css/animsition.min.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/vendor/daterangepicker/daterangepicker.css">
+<!--===============================================================================================-->
+<link rel="stylesheet" type="text/css" href="~/css/util.css">
+<link rel="stylesheet" type="text/css" href="~/css/main.css">
+<!--===============================================================================================-->
+</head>
 <form id="createForm" asp-action="Create">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-    <div class="form-group">
+    <div class="wrap-input100 validate-input">
         <p>@ViewBag.asa</p>
-        <label asp-for="ProjectTitle" class="control-label"></label>
+        <label asp-for="ProjectTitle" class="control-label">Project Title</label>
         <input asp-for="ProjectTitle" class="form-control" />
         <span asp-validation-for="ProjectTitle" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="ProjectDescription" class="control-label"></label>
+    <div class="wrap-input100 validate-input">
+        <label asp-for="ProjectDescription" class="control-label">Project Description</label>
         <input asp-for="ProjectDescription" class="form-control" />
         <span asp-validation-for="ProjectDescription" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="pfile" class="control-label"></label>
+    <div class="wrap-input100 validate-input">
+        <label asp-for="pfile" class="control-label">file</label>
         <input asp-for="pfile" class="form-control" />
         <span asp-validation-for="pfile" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="StartDate" class="control-label"></label>
+    <div class="wrap-input100 validate-input">
+        <label asp-for="StartDate" class="control-label">Start Date</label>
         <div class="input-group">
             <input asp-for="StartDate" class="form-control" type="date" value="" />
             <div class="input-group-append">
@@ -36,13 +59,13 @@
         <span asp-validation-for="StartDate" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="wrap-input100 validate-input">
         <label asp-for="Deadline" class="control-label"></label>
         <input asp-for="Deadline" class="form-control" type="date" value="" />
         <span asp-validation-for="Deadline" class="text-danger" ></span>
     </div>
 
-    <div class="form-group">
+    <div class="wrap-input100 validate-input">
         <label asp-for="Priority" class="control-label"></label>
         <select asp-for="Priority" asp-items="Html.GetEnumSelectList<PriorityLevel>()" class="form-control"></select>
         <span asp-validation-for="Priority" class="text-danger"></span>
