--- a/DemoWE/Views/Requests/Index.cshtml
+++ b/DemoWE/Views/Requests/Index.cshtml
@@ -50,10 +50,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.RequestTitle)
+               Request Title
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RequestDescription)
+                Request Description
             </th>
             @*    <th>
             @Html.DisplayNameFor(model => model.Rfile)
@@ -62,15 +62,20 @@
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StartDate)
+               Start Date
             </th>
             @* <th>
             @Html.DisplayNameFor(model => model.Deadline)
             </th> *@
-            @*   <th>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-            </th> *@
-            <th><button id="createButton" class="btn" style="font-size: 15px;">Create</button></th>
+              <th>
+               From
+            </th>
+            <th>
+             @if (ViewBag.Role != 0)
+            {
+                 <button id="createButton" class="btn" style="font-size: 15px;">Create</button>
+            }
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -91,18 +96,24 @@
                 </td>
                 <td>@item.StartDate.ToShortDateString()</td>
                 @*  <td>@item.Deadline.ToShortDateString()</td> *@
-                @* <td>
-            @Html.DisplayFor(modelItem => item.CreatedBy)
-            </td> *@
+
+                @foreach (User t in ViewBag.At)
+                {
+                    if (t.EmployeeNumber == item.CreatedBy)
+                    {
+                        <td>@t.FirstName</td>
+                    }
+                }
+            
             <td>
                <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
             <div class="btn-group" role="group">
                 <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Option</button>
                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
 
-                                <a class="dropdown-item" asp-action="Edit" asp-route-id="@item.RequestID">Edit</a>
+                               
                                 <a class="dropdown-item" asp-action="Details" asp-route-id="@item.RequestID">Details</a>
-                                <a asp-action="Delete" asp-route-id="@item.RequestID">Delete</a>
+                                <a class="dropdown-item" asp-action="Delete" asp-route-id="@item.RequestID">Delete</a>
                 </div>
             </div>
         </div>
