--- a/DemoWE/Views/Requests/_CreatePartial.cshtml
+++ b/DemoWE/Views/Requests/_CreatePartial.cshtml
@@ -1,23 +1,28 @@
 ﻿@model DemoWE.Models.Request
+<head>
 
+    <link rel="stylesheet" type="text/css" href="~/css/util.css">
+    <link rel="stylesheet" type="text/css" href="~/css/main.css">
+    <!--===============================================================================================-->
+</head>
 <form id="createForm" asp-action="Create">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-    <div class="form-group">
+    <div class="wrap-input100 validate-input">
      
-        <label asp-for="RequestTitle" class="control-label"></label>
+        <label asp-for="RequestTitle" class="control-label">Request Title</label>
         <input asp-for="RequestTitle" class="form-control" />
         <span asp-validation-for="RequestTitle" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="RequestDescription" class="control-label"></label>
+    <div class="wrap-input100 validate-input">
+        <label asp-for="RequestDescription" class="control-label">Request Description</label>
         <input asp-for="RequestDescription" class="form-control" />
         <span asp-validation-for="RequestDescription" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="rfile" class="control-label"></label>
+    <div class="wrap-input100 validate-input">
+        <label asp-for="rfile" class="control-label">file</label>
         <input type="file" id="rfile" class="form-control" name="sfile" />
         <span asp-validation-for="rfile" class="text-danger"></span>
     </div>
@@ -30,9 +35,7 @@
     </div>
 </form>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{
