--- a/DemoWE/Views/Home/Admin.cshtml
+++ b/DemoWE/Views/Home/Admin.cshtml
@@ -205,7 +205,7 @@
                 taskMapping[taskName] = i;
                 var taskData = { x: _startData[i], y: taskName }; // Fix the object structure here
                 datasets.push({
-                    label: taskName,
+                    label: ' ',
                     data: [taskData], // Wrap taskData in an array
                     borderColor: lineColors[i % lineColors.length],
                     borderWidth: 7,
