--- a/DemoWE/Views/Home/Employee.cshtml
+++ b/DemoWE/Views/Home/Employee.cshtml
@@ -221,7 +221,7 @@
                 var taskData = [{ x: _StartData[i], y: taskName }, { x: _DeadData[i], y: taskName }]; // Use task name for y-value
                 datasets.push({
 
-                    label: taskName,
+                    label: ' ',
                     data: taskData,
                     borderColor: lineColors[i % lineColors.length],
                     borderWidth: 5,
