--- a/DemoWE/Views/Requests/Create.cshtml
+++ b/DemoWE/Views/Requests/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DemoWE.Models.Request
 
 @{
-    if (Context.Session.GetString("Username") == "admin")
+    if (Context.Session.GetString("Username") == "Admin")
     {
         Layout = "_LayAdmin";
     }
