--- a/DemoWE/Views/Requests/Delete.cshtml
+++ b/DemoWE/Views/Requests/Delete.cshtml
@@ -1,6 +1,15 @@
 ﻿@model DemoWE.Models.Request
 
 @{
+    if (Context.Session.GetString("Username") == "Admin")
+    {
+        Layout = "_LayAdmin";
+    }
+    else
+    {
+        Layout = "_Layout";
+    }
+
     ViewData["Title"] = "Delete";
 }
 
