--- a/DemoWE/Views/Requests/Index.cshtml
+++ b/DemoWE/Views/Requests/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Http
 
 @{
-    if (Context.Session.GetString("Username") == "admin")
+    if (Context.Session.GetString("Username") == "Admin")
     {
         Layout = "_LayAdmin";
     }
