--- a/DemoWE/Views/Home/Employee.cshtml
+++ b/DemoWE/Views/Home/Employee.cshtml
@@ -41,7 +41,7 @@
     </div>
 
     <div style="padding: 30px; left: 30px; font-size: 40px; position: absolute; top: 50%; transform: translateY(-50%); padding: 30px;">
-        Hello, @ViewBag.name!<br />
+        Hello, @ViewBag.fn!<br />
         <span style="color: white;">@DateTime.Now.ToString("dddd")</span>
     </div>
 
