--- a/DemoWE/Views/Users/SetNewPassword.cshtml
+++ b/DemoWE/Views/Users/SetNewPassword.cshtml
@@ -60,6 +60,14 @@
                              
                         <input type="password" class="input100" id="newPassword" name="newPassword" placeholder="New Password "required>
                             </div>
+                    <span class="focus-input100" data-placeholder="&#xf191;"></span>
+                    <span class="toggle-password" onclick="togglePasswordVisibility()">
+                        <i class="fa fa-eye" aria-hidden="true" style="color: white;"></i>
+                    </span>
+                    <div class="wrap-input100 validate-input" data-validate="Confirm password">
+                        <input id="confirmPasswordInput" type="password" class="input100" placeholder="Confirm Password" />
+                        <span class="focus-input100" data-placeholder="&#xf191;"></span>
+                    </div>
                     <div class="container-login100-form-btn">
                         <button class="login100-form-btn">
                             Set Password
@@ -72,3 +80,43 @@
       
 </body>
 </html>
+<script>
+    // Get the form element
+    var form = document.querySelector('form');
+
+    // Add an event listener for the form submit event
+    form.addEventListener('submit', function (event) {
+        // Get the values of both password fields
+        var password = form.querySelector('#newPassword').value;
+        var confirmPassword = form.querySelector('#confirmPasswordInput').value;
+
+        // Check if the passwords match
+        if (password !== confirmPassword) {
+            // If passwords do not match, prevent form submission
+            event.preventDefault();
+            // Show an alert message
+            alert('Passwords do not match.');
+            // Clear the confirm password field
+            form.querySelector('#confirmPasswordInput').value = '';
+        }
+    });
+</script>
+ <style>
+        .toggle-password {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+        }
+
+            .toggle-password i {
+                font-size: 20px;
+                color: #666;
+            }
+
+        .input100 {
+            padding-right: 30px; /* Adjust this value to make space for the toggle button */
+        }
+
+    </style>
